All img now have bottom margin; set img to display block to fix their margin not collapsing into parent in feeds

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -57,6 +57,9 @@ main {
 img {
     max-width: 100%;
     vertical-align: middle;
+    
+    margin-bottom: $spacing-unit / 2;
+    display: block; //Allow margin to collapse into parent.
 }
 
 
