--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -288,10 +288,7 @@
       @include relative-font-size(1.125);
     }
   }
-    
-    img {   //Added
-        margin-bottom: $spacing-unit / 2;
-    }
+
 }
 
 
